--- a/TODO
+++ b/TODO
@@ -1,4 +1,20 @@
-host
-terminal
-cpu
-gpu
+# TODO
+
+- `-`: todo
+- `*`: in progress
+- `+`: done
+
+## to write
+- host (machine type)
+- terminal (xterm, urxvt, etc)
+- cpu (clock, make, etc)
+- gpu (clock, make, etc)
+
+## docs
+- comments in scripts
+- man page for each script, with examples
+- readme.md
+- install.md
+
+## misc
+- adverti^H^H^H^H^H^H^Hshare on r/unixporn
