--- a/TODO
+++ b/TODO
@@ -14,6 +14,8 @@
 - (0.2.0) ${dpi} format for res
 - (0.2.0) precision specifiers
 - (0.3.0) res should work on Wayland
+- (0.3.0) wm should work on Wayland
+- (0.2.0) wm should support wm's that don't set _NET_WM_NAME
 - (0.2.0) temp should support °F, °K
 
 ## docs
