--- a/TODO
+++ b/TODO
@@ -44,4 +44,5 @@
 - (0.3.0) OpenBSD support
 
 ## misc
+- (0.1.0) one final round of testing before release of v0.1.0
 - (0.1.0) adverti^H^H^H^H^H^H^Hshare on r/unixporn
