pkgs: KISS Support

--- a/TODO
+++ b/TODO
@@ -29,9 +29,9 @@
 ## pkg manager support
 + (0.1.0) FreeBSD support
 + (0.1.0) Debian/Ubuntu support
-- (0.1.0) Arch support
++ (0.1.0) Arch support
 + (0.1.0) Void support
-- (0.1.0) KISS support
++ (0.1.0) KISS support
 - (0.2.0) Gentoo support
 - (0.2.0) CRUX support
 - (0.2.0) Slackware support
