--- a/TODO
+++ b/TODO
@@ -10,6 +10,8 @@
 - (0.2.0) cpu (clock, make, etc)
 - (0.2.0) gpu (clock, make, etc)
 - (0.1.0) disk
+- (0.1.0) kernel (to get output of `uname -r` and split after dash
+- (0.1.0) tests to lint with shellcheck
 
 ## to fix
 - (0.2.0) res: ${dpi} format
