--- a/TODO
+++ b/TODO
@@ -42,7 +42,7 @@
 - (0.2.0) CRUX support
 - (0.2.0) Slackware support
 - (0.2.0) Bedrock support
-- (0.2.0) Alpine support
++ (0.2.0) Alpine support
 - (0.2.0) NixOS support
 - (0.3.0) Fedora/CentOS support
 - (0.3.0) Solus support
